--- a/src/Pages/Login/Custom.css
+++ b/src/Pages/Login/Custom.css
@@ -1,15 +1,16 @@
 .form-Login {
-  border-radius: 10px;
+  height: 70%;
   padding: 10px;
   padding-bottom: 20px;
   background-color: #f3f0f0;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 15px 20px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
  
 .Custom_btn {
   width: 20%;
 }
-
+.imgteste{
+  width: 60%;
+}
 .custom_login_back {
   max-width: 100%;
   max-height: 100%;
@@ -23,7 +24,6 @@
 .custom_Input {
   line-height: 2;
   outline: none;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 
 .Custom_Container {
@@ -36,5 +36,4 @@
   border: none;
   margin-right: 10px;
   background-color: #06a72e;
-  box-shadow: 3px 5px 8px rgba(0, 0, 0, 0.5);
 }
